# rust-blockchain-portfolio

./: .gitignore  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: main.rs
cosmwasm-verifier/: Cargo.toml
cosmwasm-verifier/src/: lib.rs
ibc-light-client/: Cargo.toml
ibc-light-client/src/: lib.rs
zk-circuit/: Cargo.toml
zk-circuit/src/: lib.rs
