[workspace]
resolver = "2"
members = [
    "ibc-light-client",
    "zk-circuit",
    "cli"
]

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Arkworks ZK dependencies  
ark-std = "0.4"
ark-ed25519 = "0.4"
ark-groth16 = "0.4" 
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-bn254 = "0.4"
ark-crypto-primitives = "0.4"
ark-snark = "0.4"

# IBC/Tendermint dependencies
tendermint = "0.40"
tendermint-proto = "0.40"
ed25519-dalek = "2.0"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }



[profile.release]
panic = "abort"
codegen-units = 1
lto = true