[package]
name = "zk-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
ark-std = { workspace = true }
ark-ed25519 = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-bn254 = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-snark = { workspace = true }
ibc-light-client = { path = "../ibc-light-client" }